Default unsuspend with blocking results in seek errors and wrong rtpinfo
In commit 883ddc72. The rtsp-media:default_unsuspend has changed its behavior. It does not unblock the media anymore.
The effect is that no buffers are going to the sink any longer, not until state is changed to PLAYING. Thus seeks will fail because it queries the Sink which has no buffer. Thus get_rtpinfo will fail because there is no buffer in the sink.